@@ -2,6 +2,7 @@ package codesquad.webserver.util;
 
 import codesquad.webserver.annotation.Component;
 import codesquad.webserver.annotation.Controller;
+import codesquad.webserver.annotation.Primary;
 import codesquad.webserver.annotation.Repository;
 import codesquad.webserver.annotation.RequestMapping;
 import codesquad.webserver.handler.HandlerPath;
@@ -10,28 +11,59 @@ import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class AnnotationScanner {
     private AnnotationScanner() {}
 
-    public static List<Class<?>> getComponents(List<Class<?>> classes) {
+    public static List<Class<?>> getComponents(List<Class<?>> classes) {  // TODO 내부적으로 관리하면 될듯!
         return classes.stream()
                 .filter(clazz -> clazz.isAnnotationPresent(Controller.class)
                         || clazz.isAnnotationPresent(Repository.class)
                         || clazz.isAnnotationPresent(Component.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    /**
+     * Component 객체들을 생성하고 보관하는 컨테이너를 반환합니다.
+     * @param components
+     * @return
+     */
     public static Map<Class<?>, Object> getInstances(List<Class<?>> components) {
         Map<Class<?>, Object> instances = new HashMap<>();
         Map<Class<?>, Class<?>> interfaceToImpl = new HashMap<>();
         Map<Class<?>, List<Class<?>>> dependencies = new HashMap<>();
 
-        // 인터페이스로 추상화된 경우에도 탐색할 수 있도록 자료구조 추가
+        // 인터페이스로 추상화된 경우에도 탐색할 수 있도록 자료구조 추가 (인터페이스 주입시에 어떤 구현체를 사용할지 지정)
+        // 모든 컴포넌트를 순회하며 인터페이스에 해당하는 구현체 목록을 생성합니다.
+        Map<Class<?>, List<Class<?>>> interfaceImpls = new HashMap<>();
         for (Class<?> component : components) {
             for (Class<?> interf : component.getInterfaces()) {
-                interfaceToImpl.put(interf, component);
+                final List<Class<?>> orDefault = interfaceImpls.getOrDefault(interf, new ArrayList<>());
+                orDefault.add(component);
+                interfaceImpls.put(interf, orDefault);
+            }
+        }
+
+        // 인터페이스 구현체 목록을 확인하며 구현체를 선택합니다.
+        for (final Class<?> interf : interfaceImpls.keySet()) {
+            final List<Class<?>> classes = interfaceImpls.get(interf);  // 인터페이스 구현체들 목록 리스트
+
+            // 구현체가 하나만 존재하면 그냥 그걸 추가한다.
+            if (classes.size() == 1) {
+                interfaceToImpl.put(interf, classes.get(0));
+                continue;
+            }
+
+            // 2개 이상 존재하는 경우!
+            boolean havePrimary = false;
+            for (final Class<?> aClass : classes) {
+                if (aClass.isAnnotationPresent(Primary.class)) {  // Primary가 2개 이상 존재하면..?
+                    interfaceToImpl.put(interf, aClass);
+                    havePrimary = true;
+                }
+            }
+            if (!havePrimary) {
+                throw new IllegalStateException("중복되는 Component가 존재합니다. 하나만 남기거나 우선순위(@Primary)를 지정하세요.");
             }
         }
 
